results-1588445.out
Currently Loaded Modulefiles:
  1) intel/intel-2016-update2      3) openmpi/openmpi-2.0.0-intel
  2) nrn/nrn-mpi-7.4               4) openmpi/openmpi-2.0.1
lewis4-r630-hpc4rc-node378, reporting for duty.
Starting 100 Cell LA Model at Fri Jun 30 10:17:21 CDT 2017
/group/neurolab/neuron_python/nrn_virtualenv/bin/python
numprocs=10
NEURON -- Release 7.4 (1370:16a7055d4a86) 2015-11-09
Duke, Yale, and the BlueBrain Project -- Copyright 1984-2015
See http://www.neuron.yale.edu/neuron/credits

Additional mechanisms from files
 BAer2CeLPKCDm.mod BAer2CeLPKCDp.mod BAer2CeM.mod BAf2CeLPKCDm.mod BAf2CeLPKCDp.mod BAf2CeM.mod BAnor2CeLPKCDm.mod BAnor2CeLPKCDp.mod BAnor2CeM.mod CE_cal.mod CE_capool.mod CE_cat.mod CE_ia.mod CE_ih.mod CE_Ihva.mod CE_im.mod CE_kdr.mod CE_leak.mod CeLPKCDm2CeLPKCDm.mod CeLPKCDm2CeLPKCDp.mod CeLPKCDm2CeM.mod CeLPKCDp2CeLPKCDm.mod CeLPKCDp2CeLPKCDp.mod CeLPKCDp2CeM.mod CeM2CeM.mod CE_na.mod CE_sahp.mod ITCd2CeLPKCDm.mod ITCd2CeLPKCDp.mod ITCv2CeM.mod LAer2CeLPKCDm.mod LAer2CeLPKCDp.mod LAer2CeM.mod LAf2CeLPKCDm.mod LAf2CeLPKCDp.mod LAf2CeM.mod LAnor2CeLPKCDm.mod LAnor2CeLPKCDp.mod LAnor2CeM.mod shock.mod vecevent.mod
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                        ^
SyntaxError: invalid syntax
                                  ^
>>> 
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                    ^
SyntaxError: invalid syntax
>>> 
  File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                     File "Ce.py", line 325
    net.modifyStims({'conds':{'label':'bkg->PKCdM_RS'}}, ['interval':100])
                                                                      ^
SyntaxError: invalid syntax               ^
SyntaxError: invalid syntax

>>> 
>>> 
Program complete...
